# cryptopals

./: Cargo.toml  README.md
data/: quotes.json
hmac-server/: Cargo.toml
hmac-server/src/: main.rs
src/: aes.rs  bignum.rs  bytes.rs  dh.rs  dh_actor.rs  distance.rs  encoding.rs  english_score.rs  hmac.rs  lib.rs  md4.rs  mersenne_twister.rs  padding.rs  quote.rs  rsa.rs  sha1.rs  sha256.rs  srp.rs  string_wrap.rs  utils.rs  xor.rs
src/mersenne_twister/: cipher.rs  into_seed.rs
