[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Renato Zannon <renato@rrsz.com.br>"]
edition = "2018"

[dependencies]
openssl = "0.10"
rand = "0.7"
percent-encoding = "2.1.0"
phf = { version = "0.8.0", features = ["macros"] }
colored = "1.9.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "0.10"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
statrs = "0.12.0"
futures = "0.3.4"
lazy_static = "1.4.0"

[dependencies.rug]
version = "1.8"
default-features = false
features = ["integer"]

[workspace]
members = ["hmac-server"]
